# MCP-Tool-Collection

./: .gitignore  README.md  main.py  plan.md  pyproject.toml  tools_list.json
src/mcp_tool_collection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mcp_toolkit/: main.py
src/mcp_toolkit/core/: config.py  logging.py  session.py
src/mcp_toolkit/providers/: __init__.py  base.py  db.py  docs.py  emai.py  filesystem.py  finance.py  maps.py  pdf.py  sheets.py  shell.py  slides.py  web.py
